@@ -1,5 +1,5 @@
 /*
-    Copyright 2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -63,5 +63,19 @@ FSL_TEST_FUNCTION( ascii ) {
     FSL_CHECK_NOTHROW( fostlib::ascii_string a( "abc", fostlib::ascii_string::encoded ) );
     std::string str = "x\xbbx";
     FSL_CHECK_EXCEPTION( fostlib::ascii_string a( str ), fostlib::exceptions::out_of_range< int > );
+}
+
+
+FSL_TEST_FUNCTION(coerce) {
+    fostlib::utf8_string source("source");
+    std::vector< fostlib::utf8 > to(
+        fostlib::coerce< std::vector< fostlib::utf8 > >(source));
+    FSL_CHECK_EQ(to.size(), 6u);
+    FSL_CHECK_EQ(to[0], 's');
+    FSL_CHECK_EQ(to[1], 'o');
+    FSL_CHECK_EQ(to[2], 'u');
+    FSL_CHECK_EQ(to[3], 'r');
+    FSL_CHECK_EQ(to[4], 'c');
+    FSL_CHECK_EQ(to[5], 'e');
 }
 
