@@ -1,3 +1,6 @@
+2012-03-03  Kirit Saelensminde  <kirit@felspar.com>
+ Added coercions from fostlib::utf8_string.to std::vector<unsigned char>.
+
 2012-03-02  Kirit Saelensminde  <kirit@felspar.com>
  Added coercions between fostlib::json and fostlib::jcursor.
 
